@@ -1,6 +1,6 @@
 #MIN_CONFIG(3.2.0)
 
-AM_INIT_AUTOMAKE( [kthinkbat], [0.2.2-svn] )
+AM_INIT_AUTOMAKE( [kthinkbat], [0.2.2] )
 AC_C_BIGENDIAN
 AC_CHECK_KDEMAXPATHLEN
 
