@@ -1,9 +1,11 @@
-KThinkBat SVN HEAD:
+KThinkBat 0.2.2 - 24.10.2006:
    * removed faulty text label from config dialog (Ticket #6)
    * added option to draw the battery gauge upright (Ticket #3)
    * better ACPI support (design capacity, design critical capacity)
-   * calculate remaining (discharging) time from capacity values, if the better embedded controler values ar not available
+   * calculate remaining (discharging) time from capacity values, 
+     if the better embedded controler values ar not available
    * changed min-max range for gauge size values to reflect upright gauge option
+   * show also the remaining time in the applet
 
 KThinkBat 0.2.1 - 22 Okt 2006:
    * parse the remaining time if using tp_smapi >= 0.29
